El popup recibe los resultados

--- a/src/popup/buscar.html
+++ b/src/popup/buscar.html
@@ -2,11 +2,16 @@
 <html>
 
 <head>
-
+    <meta charset="utf-8"> 
+<title>BUSCADORES</title>
 </head>
 
 <body>
+    <div id="cuerpo">
 
+    </div>
+        <!-- <ul id="lista-results"></ul> -->
+    <script src="buscar.js" type="application/javascript"></script>
 </body>
 
 </html>
