--- a/src/popup/buscar.html
+++ b/src/popup/buscar.html
@@ -4,15 +4,27 @@
 <head>
     <meta charset="utf-8"> 
 <title>BUSCADORES</title>
+<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet"> 
 </head>
-
 <body>
-    <h2>Otros resultados</h2>
+    <h2 id="titulo" style="font-family: 'Oswald', sans-serif; text-align:center">Otros resultados para: </h2>
     <div id="cuerpo">
-
     </div>
         <!-- <ul id="lista-results"></ul> -->
     <script src="buscar.js" type="application/javascript"></script>
+
+    <style>
+        body{
+            background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+        }
+        .results{
+            font-family: 'Merriweather', serif;
+
+            color: black;
+
+        }
+    </style>
 </body>
 
 </html>
