--- a/src/popup/buscar.html
+++ b/src/popup/buscar.html
@@ -9,11 +9,20 @@
 </head>
 
 <body>
+  <button type="button" id="senddata" class="btn btn-primary btn-block">Send data</button>
+  <div class="form-group">
+    <div id="seleccion"></div>
+
+    <select id="listusers" class="form-control">
+
+    </select>
+  </div>
   <h2 id="titulo" style="font-family: 'Oswald', sans-serif; text-align:center">Otros resultados para: </h2>
   <div id="cuerpo">
   </div>
   <!-- <ul id="lista-results"></ul> -->
   <script src="buscar.js" type="application/javascript"></script>
+  <script src="tool.js" type="application/javascript"></script>
 
   <style>
     body {
