Renderizado de posicion promedio + limpieza de codigo

--- a/src/popup/buscar.html
+++ b/src/popup/buscar.html
@@ -11,7 +11,7 @@
 <body>
   <!--   <button type="button" id="senddata" class="btn btn-primary btn-block">Send data</button>
  -->
-  <div class="form-group">
+  <div class="form-group" style="display: none;">
     <div id="seleccion"></div>
     <select id="listusers" class="form-control">
     </select>
@@ -21,7 +21,6 @@
   </div>
   <!-- <ul id="lista-results"></ul> -->
   <script src="buscar.js" type="application/javascript"></script>
-  <script src="tool.js" type="application/javascript"></script>
 
   <style>
     body {
